<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit_text_trip_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/TripName"
        />
    <EditText
        android:id="@+id/edit_text_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/date"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />

    <EditText
        android:id="@+id/edit_fuel_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/fuel_type"/>

    <EditText
        android:id="@+id/edit_text_litre_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/litres"
        />
    <EditText
        android:id="@+id/edit_text_perLitre_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/perLitre"/>

    <TextView
        android:id="@+id/gas_text"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/gas_total" />

    <TextView
        android:id="@+id/Fuel_change_to"
        android:layout_width="235dp"
        android:layout_height="29dp"
        android:ems="10"
        android:text="@string/empty" />

    <TextView
        android:id="@+id/CF_text"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/carbon_footprint" />

    <TextView
        android:id="@+id/Edit_CarbonFootPrint"
        android:layout_width="235dp"
        android:layout_height="33dp"
        android:ems="10"
        android:text="@string/empty" />
</LinearLayout>